--- a/components/_responsive.scss
+++ b/components/_responsive.scss
@@ -12,6 +12,9 @@
     font-size: 16px;
     border-radius: 8px;
   }
+  .contact__input {
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 800px) {
