--- a/components/_responsive.scss
+++ b/components/_responsive.scss
@@ -50,7 +50,7 @@
     grid-template-rows: auto auto auto;
     text-align: center;
     gap: 2rem;
-    min-height: 75vh;
+    height: fit-content;
   }
 
   .bio__img {
