--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -18,6 +18,9 @@
   --color-box-img: var(--color-black);
   --color-link-bg: var(--color-black);
   --color-input-border: var(--color-black);
+  --bg-color-gradient-1: rgba(255, 255, 255, 0.78);
+  --bg-color-gradient-2: rgba(21, 109, 209, 0.08);
+  --bg-border: rgba(21, 109, 209, 0.14);
   --font-family-raleway: "Raleway", sans-serif;
   --font-family-poppins: "poppins", sans-serif;
   --font-weight-bold: 700;
