--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -1,9 +1,10 @@
 /* footer section*/
 .footer {
-  color: var(--color-text);
+  color: var(--color-text-secondary);
   padding: 1rem 0;
   font-size: 18px;
   text-align: center;
   border-top: 0.1rem solid var(--color-line);
+  background-color: var(--color-surface);
   margin-top: 15px;
 }
