--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -47,6 +47,7 @@
   --color-text-muted: var(--color-grey-500);
 
   /* Component Specific Colors */
+  --color-section-heading: var(--color-blue-600);
   --color-nav-active: var(--color-blue-600);
   --color-social-icon: var(--color-blue-600);
   --color-social-icon-hover: var(--color-blue-700);
