--- a/components/_contact.scss
+++ b/components/_contact.scss
@@ -2,6 +2,7 @@
 
 .contact {
   height: auto;
+  padding: 8rem 0;
 }
 
 .contact {
@@ -27,6 +28,7 @@
   font-size: 20px;
   font-family: var(--font-family-raleway);
   line-height: 1.9;
+  color: var(--color-blue-800);
 }
 
 .contact__item_email {
@@ -35,6 +37,7 @@
   font-family: var(--font-family-poppins);
   font-size: 18px;
   margin: 2.5rem 0;
+  color: var(--color-blue-800);
 }
 
 .contact__input {
@@ -43,7 +46,8 @@
   box-sizing: border-box;
   padding: 0.25rem 0;
   height: 2.6rem;
-  border-bottom: 0.1rem solid gray;
+  color: var(--color-blue-800);
+  border-bottom: 0.1rem solid var(--color-blue-900);
   background: transparent;
   flex: 1;
   font-family: var(--font-family-poppins);
@@ -66,8 +70,8 @@
   background-color: var(--color-white);
   color: var(--color-blue-700);
   padding: 1rem 0;
-
-  border-bottom: solid var(--color-blue-100);
+  border-radius: 5px;
+  border: 2px solid var(--color-blue-900);
   font-family: var(--font-family-poppins);
   font-weight: 500;
   transition: all ease 0.5s;
@@ -76,5 +80,5 @@
 #form__submit_btn:hover {
   transition: all ease 0.5s;
   transform: translateY(-6px);
-  box-shadow: 0 8px 20px rgba(67, 56, 202, 0.3);
+  box-shadow: var(--shadow-blue);
 }
