--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -45,7 +45,9 @@
   --color-text-primary: var(--color-grey-900);
   --color-text-secondary: var(--color-grey-600);
   --color-text-muted: var(--color-grey-500);
-
+  --color-email-link: var(--color-blue-800);
+  --color-btn: var(--color-blue-600);
+  /* Component Specific Colors */
   /* Component Specific Colors */
   --color-section-bg: var(--color-blue-50);
   --color-section-heading: var(--color-blue-600);
