--- a/components/_contact.scss
+++ b/components/_contact.scss
@@ -37,7 +37,7 @@
   font-family: var(--font-family-poppins);
   font-size: 18px;
   margin: 2.5rem 0;
-  color: var(--color-blue-800);
+  color: var(--color-email-link);
 }
 
 .contact__input {
@@ -67,18 +67,17 @@
   grid-column: 1;
   grid-row: 3;
   font-size: 20px;
-  background-color: var(--color-white);
-  color: var(--color-blue-700);
+  background-color: var(--color-btn);
+  color: var(--color-white);
   padding: 1rem 0;
   border-radius: 5px;
-  border: 2px solid var(--color-blue-900);
+  border: 2px;
   font-family: var(--font-family-poppins);
   font-weight: 500;
   transition: all ease 0.5s;
 }
 
 #form__submit_btn:hover {
+  transform: scale(1.05);
   transition: all ease 0.5s;
-  transform: translateY(-6px);
-  box-shadow: var(--shadow-blue);
 }
