changed : arrow size in 800px window

--- a/components/_responsive.scss
+++ b/components/_responsive.scss
@@ -285,6 +285,10 @@
     visibility: visible;
     opacity: 1;
   }
+
+  .back_to_top {
+    padding: 10px 15px;
+  }
 }
 
 @media (max-width: 450px) {
