edit : contact form to recive email from users

--- a/components/_contact.scss
+++ b/components/_contact.scss
@@ -75,6 +75,7 @@
   font-family: var(--font-family-poppins);
   font-weight: 500;
   transition: all ease 0.5s;
+  cursor: pointer;
 }
 
 #form__submit_btn:hover {
