--- a/components/_tooltip.scss
+++ b/components/_tooltip.scss
@@ -1,5 +1,6 @@
 /* Tooltip component styles */
 .tooltip-container {
+  margin-top: 25px;
   position: relative;
   display: inline-block;
   margin-left: 1rem;
@@ -196,6 +197,12 @@ html:has(.checkbox-input:checked) .tooltip-inner {
   border-bottom: 1px solid var(--bg-border);
   transform: translateX(-50%) rotate(45deg);
   margin-top: -0.375rem;
+}
+
+#submission-counter {
+  font-family: var(--font-family-poppins);
+  font-size: 14px;
+  margin-bottom: 1rem;
 }
 
 /* Dark theme arrow */
