--- a/components/_responsive.scss
+++ b/components/_responsive.scss
@@ -1,5 +1,37 @@
 /* Responsive section */
 
+@media (max-width: 1600px) {
+  .bio__heading {
+    padding-left: 0;
+  }
+
+  .bio__description {
+    padding-left: 0;
+  }
+}
+
+@media (max-width: 1200px) {
+  .bio {
+    gap: 2rem;
+    padding: 6rem 0;
+  }
+
+  .bio__img {
+    height: 380px;
+  }
+  .tooltip-container {
+    margin-top: 25px;
+  }
+
+  .tooltip-content {
+    width: 15rem;
+  }
+
+  .tooltip-inner {
+    padding: 1rem;
+  }
+}
+
 @media (min-width: 800px) and (max-width: 1200px) {
   :root {
     --scroll-margin-top: 70px;
@@ -66,6 +98,23 @@
   .contact {
     padding: 120px 0;
   }
+  .tooltip-container {
+    margin-top: 20px;
+    margin-left: 0.8rem;
+  }
+
+  .tooltip-trigger {
+    padding: 0.6rem 1.2rem;
+    font-size: 0.8rem;
+  }
+
+  .tooltip-content {
+    width: 14rem;
+  }
+
+  .tooltip-inner {
+    padding: 0.8rem;
+  }
 }
 
 @media (max-width: 800px) {
@@ -101,25 +150,39 @@
     grid-template-rows: auto auto auto;
     text-align: center;
     gap: 2rem;
-    height: auto;
-    padding-bottom: 60px;
+    padding: 4rem 0;
   }
 
   .bio__img {
     grid-column: 1;
     grid-row: 1;
-    justify-self: center;
-    max-width: 300px;
+    height: 300px;
     width: 100%;
+    max-width: 300px;
   }
 
   .bio__heading {
     grid-column: 1;
     grid-row: 2;
     text-align: center;
-    margin: 0;
-    font-size: 50px;
     max-width: none;
+  }
+
+  .bio__description {
+    grid-column: 1;
+    grid-row: 3;
+    align-items: center;
+    text-align: center;
+  }
+
+  .bio__description_text {
+    text-align: center;
+    max-width: 100%;
+  }
+
+  .bio__cv {
+    justify-content: center;
+    padding-right: 60px;
   }
 
   .skills__item_heading,
@@ -216,10 +279,28 @@
     padding: 0.7rem 0.7rem;
   }
 
+  .tooltip-container {
+    margin-top: 15px;
+    margin-left: 0.5rem;
+  }
+
+  .tooltip-trigger {
+    padding: 0.5rem 1rem;
+    font-size: 0.75rem;
+  }
+
+  .tooltip-content {
+    width: 13rem;
+  }
+
+  .tooltip-inner {
+    padding: 0.75rem;
+  }
   .footer {
     font-size: 17px;
   }
 }
+
 @media (max-width: 650px) {
   :root {
     --scroll-margin-top: 90px;
@@ -298,5 +379,51 @@
   }
   #form__submit_btn {
     grid-row: 4;
+  }
+}
+
+@media (max-width: 450px) {
+  .bio__cv {
+    flex-direction: column;
+  }
+
+  .bio__btn,
+  .bio__paragraph {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .skills__item {
+    padding: 1.2rem;
+  }
+
+  .tooltip-container {
+    margin-top: 10px;
+    margin-left: 0.25rem;
+  }
+
+  .tooltip-trigger {
+    padding: 0.4rem 0.8rem;
+    font-size: 0.7rem;
+  }
+
+  .tooltip-content {
+    width: 12rem;
+  }
+
+  .tooltip-inner {
+    padding: 0.6rem;
+  }
+
+  .tooltip-title {
+    font-size: 0.8rem;
+  }
+
+  .tooltip-description {
+    font-size: 0.8rem;
+  }
+
+  .tooltip-footer-text {
+    font-size: 0.7rem;
   }
 }
