--- a/components/_responsive.scss
+++ b/components/_responsive.scss
@@ -154,7 +154,6 @@
 
   .bio__cv {
     justify-content: center;
-    padding-right: 60px;
   }
 
   .skills__item_heading,
@@ -247,7 +246,7 @@
 
   #form__submit_btn {
     font-size: 15px;
-    justify-self: start; /* for the btn to not stresh */
+    justify-self: start;
     padding: 0.7rem 0.7rem;
   }
 
@@ -328,18 +327,9 @@
 }
 
 @media (max-width: 450px) {
-  .contact__item_form {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
-  }
-  #form__submit_btn {
-    grid-row: 4;
-  }
-}
-
-@media (max-width: 450px) {
   .bio__cv {
     flex-direction: column;
+    padding-right: 47px;
   }
 
   .bio__btn,
@@ -350,6 +340,14 @@
 
   .skills__item {
     padding: 1.2rem;
+  }
+
+  .contact__item_form {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+  }
+  #form__submit_btn {
+    grid-row: 4;
   }
 
   .tooltip-container {
